--- a/index.html
+++ b/index.html
@@ -19,4 +19,9 @@ to check hidden files linux command is ls -al
 4)git add . or filename or *
 5)git status
 6)git rm --cached index.html(to remove)
+7)when we are adding we should commit
+8)git commit -m "first command"
+9)git branch (Master is the default branch)
+10)git branch branchname(to create branches)
+11)switch from one branch to another branch- git checkout jspiders
 -->
